Update: Centered body and fixed overflow.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,9 +1,9 @@
 body {
   background-color: #222;
   color: #e1ffdf;
-  font-family: sans-serif;
+  font-family: 'Courier New', Courier, monospace;
   line-height: 1.5;
-  margin: 1rem;
+  margin: 10px auto;
   max-width: 768px;
   display: grid;
   justify-content: center;
@@ -27,7 +27,11 @@ a {
 .container {
   background-color: rgb(56, 56, 56);
   padding: 15px;
-  margin: 0 auto;
+  margin: 10px auto;
+  min-width: 600px;
+  max-width: 600px; 
+  width: 100%;
+  overflow: auto;
 }
 
 .main-menu {
